# offsets-finder

./: Cargo.toml  README.md
cpp/: CMakeLists.txt  README.md  build-mingw.bat  build.bat
cpp/include/: config.hpp  exporter.hpp  models.hpp  scanner.hpp  ui.hpp
cpp/src/: config.cpp  exporter.cpp  main.cpp  models.cpp  scanner.cpp  ui.cpp
src/: config.rs  dumper.rs  exporter.rs  main.rs  models.rs  scanner.rs  ui.rs
