[package]
name = "offsets-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
rfd = "0.14"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
sysinfo = "0.33"
windows = { version = "0.58", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
